<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/contactname"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.01"
            android:background="#dfdfdf" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerViewChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9.5">


        </android.support.v7.widget.RecyclerView>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.01"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:id="@+id/messageToSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:ems="10"
                android:hint="@string/send_message"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="19dp" />

            <Button
                android:id="@+id/sendMessageButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:text="@string/send" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>