<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctorCalendar.DoctorCalendar"
    android:orientation="vertical">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/calender_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Set Availability" />

</LinearLayout>