<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="#d3d3d3"
    android:id="@+id/layout">


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-light"
        android:layout_marginEnd="10dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="false"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/patient"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="delete" />
</RelativeLayout>